# pydantic-code-reviewer

./: .env.example  .gitignore  CLAUDE.md  README.md  REQUIREMENTS.txt  execute-agent  load_test.sh  pyproject.toml  run-tests
.claude/: ralph-loop.local.md
collector/: collector-config.yaml  run-collector.sh
otel-collector/: Makefile  builder-config.yaml  collector-config.yaml
otel-collector/messagessplitterprocessor/: factory.go  go.mod  go.sum  processor.go
src/code_reviewer/: __init__.py  agent_context.py  config.py  file_utils.py  languages.py  main.py  normalizer.py  pipeline.py  pydantic-mappings.json  repo.py  telemetry.py  tool_config.py
src/code_reviewer/agents/: __init__.py  complexity.py  documentation.py  report.py  security.py
src/code_reviewer/models/: __init__.py  review.py
tests/: test_agent_tools.py  test_agents.py  test_coverage_gaps.py  test_main.py  test_models.py  test_pipeline.py  test_repo.py  test_telemetry.py
